solved canvas overflow again

--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,18 @@ body,
 body * {
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
 }
 
-body {
+#root {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 100vw;
 	height: 100vh;
-	display: grid;
-	place-content: center;
 }
 
 canvas {
-	max-width: 100%;
-	max-height: 100%;
+	width: 100%;
+	height: 100%;
 }
